Bug 1274602 - When checking for tags, allow for white-space. r=honzab